# HaskellTut

./: AssignmentE.hs  conditionals.hs  dataTypes.hs  hello.hs  parametricPolymorphism.hs  part1.hs
Assignments/haskell-intro-dushyant.singh/assignments/a/: A.hs
course/: AssignmentA.hs  AssignmentD.hs  evenno.hs  intro.hs  length.hs
course/part2/: Assignment.hs  Functions.hs  Pairs.hs  Soln.hs  StylisiticConsiderations.hs  dataConstruct.hs  reSolve.hs
course/part3/: AssignmentC.hs  Folds.hs  Incremental.hs  fastReverse&Acc.hs  remove.hs
course/part4/: DerivingTypeClasses.hs  FunctorFoldable.hs  overloading&TypeClasses.hs  parametric.hs
course/part5/: IO.hs  InteractionTrees.hs  explicitEffects&IO.hs  unsafePerformIO.hs
course/part5/package-Demo/: CHANGELOG.md  package-Demo.cabal
course/part5/package-Demo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
course/part5/package-Demo/src/: MyLib.hs
course/part6/monads/: LICENSE  monads.cabal
course/part6/monads/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
course/part6/monads/src/: MyLib.hs
