cabal-version:   3.0
name:            monads
version:         0.1.0.0
license:         BSD-2-Clause
license-file:    LICENSE
author:          Dushyant
maintainer:      dushyant.workspace@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base,
                      containers ^>= 0.7  

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite monads-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        monads
